Criado teste unitario para validar entrada do request

--- a/src/api/tests/UnitTests/UnitTests.csproj
+++ b/src/api/tests/UnitTests/UnitTests.csproj
@@ -19,6 +19,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Api\Api.csproj" />
+    <ProjectReference Include="..\..\src\Application\Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
