Adicionar migration para criação da tabela no banco e adicionar validação de tamanho no campo Telefone

--- a/src/api/src/Api/appsettings.json
+++ b/src/api/src/Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(local)\\SQLEXPRESS;Database=AgendaFiap;Integrated Security=SSPI;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
