- Criação de Novos Contatos - Exclusão de Novos Contatos

--- a/src/api/src/Api/appsettings.json
+++ b/src/api/src/Api/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local)\\SQLEXPRESS;Database=AgendaFiap;Integrated Security=SSPI;TrustServerCertificate=True"
+    "DefaultConnection": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=AGENDA;Integrated Security=True;MultipleActiveResultSets=True;Connection Timeout=3600"
+
+
   },
   "Logging": {
     "LogLevel": {
