--- a/src/api/src/Api/appsettings.json
+++ b/src/api/src/Api/appsettings.json
@@ -1,8 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=AGENDA;Integrated Security=True;MultipleActiveResultSets=True;Connection Timeout=3600"
-
-
+    "DefaultConnection": "Server=(local)\\SQLEXPRESS;Database=AgendaFiap;Integrated Security=SSPI;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
