Mudando a forma como é injetado o HttpClient

--- a/src/api/src/Api/appsettings.json
+++ b/src/api/src/Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local)\\SQLEXPRESS;Database=AgendaFiap;Integrated Security=SSPI;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost;Database=AgendaFiap;Integrated Security=SSPI;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
