--- a/src/api/Agenda.Api/Agenda.Api.csproj
+++ b/src/api/Agenda.Api/Agenda.Api.csproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="..\..\common\Agenda.Common\Agenda.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="Agenda.IntegrationTests" />
+  </ItemGroup>
+
 </Project>
