--- a/src/Common/Agenda.Common.DependencyInjection/Agenda.Common.DependencyInjection.csproj
+++ b/src/Common/Agenda.Common.DependencyInjection/Agenda.Common.DependencyInjection.csproj
@@ -13,6 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Modules\Eventos\Modules.Eventos.Endpoints\Modules.Eventos.Endpoints.csproj" />
+    <ProjectReference Include="..\..\Modules\Eventos\Modules.Eventos.Persistence\Modules.Eventos.Persistence.csproj" />
     <ProjectReference Include="..\Agenda.Common.Helpers\Agenda.Common.Helpers.csproj" />
     <ProjectReference Include="..\..\Modules\Contatos\Modules.Contatos.CrossCutting.DependencyInjection\Modules.Contatos.CrossCutting.DependencyInjection.csproj" />
     <ProjectReference Include="..\..\Modules\Contatos\Modules.Contatos.Endpoints\Modules.Contatos.Endpoints.csproj" />
