--- a/src/Modules/Eventos/Modules.Eventos.Application/Modules.Eventos.Application.csproj
+++ b/src/Modules/Eventos/Modules.Eventos.Application/Modules.Eventos.Application.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="MassTransit" Version="8.2.5" />
+    <PackageReference Include="MediatR" Version="12.4.0" />
   </ItemGroup>
 
   <ItemGroup>
