--- a/src/Common/Agenda.Common.DependencyInjection/Agenda.Common.DependencyInjection.csproj
+++ b/src/Common/Agenda.Common.DependencyInjection/Agenda.Common.DependencyInjection.csproj
@@ -9,7 +9,9 @@
   <ItemGroup>
     <PackageReference Include="MassTransit" Version="8.2.5" />
     <PackageReference Include="MassTransit.RabbitMq" Version="8.2.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.8" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+    <PackageReference Include="Moq" Version="4.20.71" />
   </ItemGroup>
 
   <ItemGroup>
