--- a/src/Modules/Eventos/Modules.Eventos.Application/Modules.Eventos.Application.csproj
+++ b/src/Modules/Eventos/Modules.Eventos.Application/Modules.Eventos.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Mapster" Version="7.4.0" />
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="MassTransit" Version="8.2.5" />
     <PackageReference Include="MediatR" Version="12.4.0" />
   </ItemGroup>
@@ -19,7 +19,7 @@
 
   <ItemGroup>
 		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-			<_Parameter1>Modules.Eventos.UnitTest</_Parameter1>
+			<_Parameter1>Modules.Eventos.UnitTests</_Parameter1>
 		</AssemblyAttribute>
 	</ItemGroup>
 
