--- a/src/Web/Agenda.WebUI/Agenda.WebUI.csproj
+++ b/src/Web/Agenda.WebUI/Agenda.WebUI.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.2" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+    <PackageReference Include="Radzen.Blazor" Version="5.1.11" />
   </ItemGroup>
 
   <ItemGroup>
