--- a/prometheus.yml
+++ b/prometheus.yml
@@ -2,6 +2,14 @@ global:
   scrape_interval: 10s 
 
 scrape_configs:
-  - job_name: 'Agenda-Fiap'
+  - job_name: 'prometheus'
     static_configs:
-    - targets: ['localhost:5269']
+    - targets: ['localhost:9090']
+
+  - job_name: 'agenda-fiap'
+    static_configs:
+    - targets: ['localhost:5207']
+
+  - job_name: 'RabbitMQ'
+    static_configs:
+    - targets: ['localhost:15692']
