--- a/src/App/appsettings.Development.json
+++ b/src/App/appsettings.Development.json
@@ -7,6 +7,15 @@
     "Username": "guest",
     "Password": "guest"
   },
+  "Smtp": {
+    "Sender": {
+      "Name": "No reply",
+      "Mail": "mock.no-reply@agenda-fiap.com"
+    },
+    "Host": "localhost",
+    "Port": 1025,
+    "IsSecure": false
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
