--- a/src/Common/Agenda.Common.DependencyInjection/Agenda.Common.DependencyInjection.csproj
+++ b/src/Common/Agenda.Common.DependencyInjection/Agenda.Common.DependencyInjection.csproj
@@ -22,6 +22,7 @@
     <ProjectReference Include="..\..\Modules\Contatos\Modules.Contatos.Endpoints\Modules.Contatos.Endpoints.csproj" />
     <ProjectReference Include="..\..\Modules\Contatos\Modules.Contatos.Persistence\Modules.Contatos.Persistence.csproj" />
     <ProjectReference Include="..\..\Modules\Eventos\Modules.Eventos.CrossCutting.DependencyInjection\Modules.Eventos.CrossCutting.DependencyInjection.csproj" />
+    <ProjectReference Include="..\..\Modules\Notificacoes\Modules.Notificacoes.CrossCutting.DependencyInjection\Modules.Notificacoes.CrossCutting.DependencyInjection.csproj" />
   </ItemGroup>
 
 </Project>
