--- a/src/Common/Agenda.Common.Shared/Agenda.Common.Shared.csproj
+++ b/src/Common/Agenda.Common.Shared/Agenda.Common.Shared.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EFCore.CheckConstraints" Version="8.0.1" />
     <PackageReference Include="MediatR" Version="12.4.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
   </ItemGroup>
