--- a/src/Modules/Contatos/Modules.Contatos.Application/Modules.Contatos.Application.csproj
+++ b/src/Modules/Contatos/Modules.Contatos.Application/Modules.Contatos.Application.csproj
@@ -4,6 +4,7 @@
     <ProjectReference Include="..\Modules.Contatos.Domain\Modules.Contatos.Domain.csproj" />
     <ProjectReference Include="..\..\..\Common\Agenda.Common.Shared\Agenda.Common.Shared.csproj" />
     <ProjectReference Include="..\Modules.Contatos.IntegrationEvents\Modules.Contatos.IntegrationEvents.csproj" />
+    <ProjectReference Include="..\..\Eventos\Modules.Eventos.IntegrationEvents\Modules.Eventos.IntegrationEvents.csproj" />
   </ItemGroup>
 
   <ItemGroup>
