refatorando eventos de domínio + aplicando o padrão de comunicação kill switch

--- a/src/App/appsettings.Development.json
+++ b/src/App/appsettings.Development.json
@@ -5,7 +5,13 @@
   "MessageBroker": {
     "Host": "localhost",
     "Username": "guest",
-    "Password": "guest"
+    "Password": "guest",
+    "NumberOfRetries": 3,
+    "KillSwitch": {
+      "ActivationThreshold": 10,
+      "TripThreshold": 0.15,
+      "RestartMinutesTimeout": 1
+    }
   },
   "Smtp": {
     "Sender": {
