adicionado configurações do docker e do kubernetes

--- a/src/App/appsettings.json
+++ b/src/App/appsettings.json
@@ -1,9 +1,31 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=localhost;Database=AgendaFiap;Integrated Security=SSPI;TrustServerCertificate=True;"
+  },
+  "MessageBroker": {
+    "Host": "rabbitmq://agenda.mq/",
+    "Username": "guest",
+    "Password": "guest",
+    "NumberOfRetries": 3,
+    "KillSwitch": {
+      "ActivationThreshold": 10,
+      "TripThreshold": 0.15,
+      "RestartMinutesTimeout": 1
+    }
+  },
+  "Smtp": {
+    "Sender": {
+      "Name": "No reply",
+      "Mail": "mock.no-reply@agenda-fiap.com"
+    },
+    "Host": "mailhog",
+    "Port": 1025,
+    "IsSecure": false
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
