--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,36 @@ services:
     volumes:
       - ./rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
     entrypoint: /bin/sh -c "rabbitmq-plugins enable rabbitmq_prometheus && rabbitmq-server"
+
   mailhog:
     container_name: "mailhog"
     image: mailhog/mailhog
     ports:
       - '1025:1025'
       - '8025:8025'
+
+  sqlserver:
+    image: mcr.microsoft.com/mssql/server
+    container_name: "sqlserver"
+    environment:
+      - ACCEPT_EULA=Y
+      - SA_PASSWORD=fiap12345$
+      - MSSQL_PID=Developer
+    ports:
+      - "1433:1433"
+
+  agenda.fiap:
+    container_name: "agenda.fiap"
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - '5207:80' 
+    volumes:
+      - ./src/App/appsettings.json:/app/appsettings.json
+    environment:
+      - ASPNETCORE_ENVIRONMENT=production
+    depends_on:
+      - agenda.mq
+      - mailhog
+      - sqlserver
