--- a/src/App/App.csproj
+++ b/src/App/App.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -20,7 +20,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Common\Agenda.Common.DependencyInjection\Agenda.Common.DependencyInjection.csproj" />
-    <ProjectReference Include="..\Common\Agenda.Common.Helpers\Agenda.Common.Helpers.csproj" />
   </ItemGroup>
   
 </Project>
